[gd_scene load_steps=8 format=3 uid="uid://cvl42sdungpi7"]

[ext_resource type="Script" path="res://players.gd" id="1_fv8nl"]
[ext_resource type="Texture2D" uid="uid://bwfk2fxiuh3ma" path="res://art/player.png" id="2_xy6r1"]
[ext_resource type="Texture2D" uid="uid://c57r875rt4ows" path="res://art/Barre de vie photoshop.png" id="3_oj4b6"]
[ext_resource type="Texture2D" uid="uid://jn2g3ni4fkgv" path="res://art/vie barre.png" id="4_p4cx3"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_tip00"]
radius = 50.0
height = 148.0

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_8iswq"]

[sub_resource type="CircleShape2D" id="CircleShape2D_kx32q"]
radius = 96.0208

[node name="Players" type="Area2D" groups=["Players"]]
position = Vector2(885, 453)
script = ExtResource("1_fv8nl")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.795, 0.795)
texture = ExtResource("2_xy6r1")
offset = Vector2(0, -86.81)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(3, -71)
shape = SubResource("CapsuleShape2D_tip00")

[node name="AttackArea2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea2D"]
material = SubResource("CanvasItemMaterial_8iswq")
position = Vector2(3, -71)
shape = SubResource("CircleShape2D_kx32q")

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="HealthBar" type="TextureProgressBar" parent="."]
offset_left = -49.0
offset_top = -147.0
offset_right = 51.0
offset_bottom = -127.0
value = 100.0
texture_over = ExtResource("3_oj4b6")
texture_progress = ExtResource("4_p4cx3")
texture_progress_offset = Vector2(13.345, 6.965)

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="area_entered" from="AttackArea2D" to="." method="_on_AttackArea2D_area_entered"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_AttackTimer_timeout"]
